[gd_scene load_steps=10 format=2]

[ext_resource path="res://SendToEarth.gd" type="Script" id=1]
[ext_resource path="res://assets/background/textboxBG.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/oswald/Oswald-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/icons/denybox.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/confirmbox.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/nextbutton.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 3 )

[node name="SendToEarth" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textbox_which" type="Sprite" parent="."]
position = Vector2( 982.558, 113.307 )
scale = Vector2( 1, 0.2 )
texture = ExtResource( 2 )

[node name="which_plant_text" type="Label" parent="."]
margin_left = 395.729
margin_top = 23.6761
margin_right = 1559.73
margin_bottom = 202.676
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Which plant would you like to send back to Earth?
(or click the Earth button again to cancel)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textbox_confirm" type="Sprite" parent="."]
position = Vector2( 970.185, 621.749 )
scale = Vector2( 1, 0.944837 )
texture = ExtResource( 2 )

[node name="confirm_text" type="Label" parent="."]
margin_left = 340.01
margin_top = 340.01
margin_right = 1545.01
margin_bottom = 617.01
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Would you like to send this plant 
back to Earth?"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yesButton" type="TextureButton" parent="."]
margin_left = 975.526
margin_top = 713.843
margin_right = 1312.53
margin_bottom = 860.843
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="noButton" type="TextureButton" parent="."]
margin_left = 293.726
margin_top = 717.403
margin_right = 630.726
margin_bottom = 864.403
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textbox_response" type="Sprite" parent="."]
position = Vector2( 970.374, 625.31 )
scale = Vector2( 1, 0.944837 )
texture = ExtResource( 2 )

[node name="closeButton" type="TextureButton" parent="."]
margin_left = 637.296
margin_top = 785.188
margin_right = 974.296
margin_bottom = 932.188
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="response_text" type="RichTextLabel" parent="."]
margin_left = 355.0
margin_top = 280.0
margin_right = 1567.0
margin_bottom = 808.0
mouse_filter = 1
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="yesButton" to="." method="_on_yesButton_pressed"]
[connection signal="pressed" from="noButton" to="." method="_on_noButton_pressed"]
[connection signal="pressed" from="closeButton" to="." method="_on_closeButton_pressed"]
